# Shop-Management

./: Cart.java  CartOperations.java  Client.java  Item.java  Main.java  ManageClient.java  ManageCostsAndDiscounts.java  ManageInventory.java  ManageSalesHistory.java  Purchase.java  README.md  Store.java  dune-project  store.pl
_build/: .db  .digest-db  log
_build/default/: README.md  Shop_Management.dune-package  Shop_Management.install
_build/default/lib/: Shop_Management.cma  Shop_Management.cmxa  Shop_Management.cmxs
_build/default/lib/.Shop_Management.objs/byte/: shop_Management.cmi  shop_Management.cmo  shop_Management.cmt
_build/default/lib/.Shop_Management.objs/native/: shop_Management.cmx
_build/default/lib/.merlin-conf/: lib-Shop_Management
_build/default/test/.merlin-conf/: exe-test_Shop_Management
_build/default/test/.test_Shop_Management.eobjs/byte/: dune__exe__Test_Shop_Management.cmi  dune__exe__Test_Shop_Management.cmti
_build/default/test/.test_Shop_Management.eobjs/native/: dune__exe__Test_Shop_Management.cmx
_build/install/default/lib/Shop_Management/: META  dune-package  opam
lib/: dune
test/: dune
